# GeneralBot

./: .breakpoints  .gitignore  .replit  Pipfile  README.md  db.py  keep_alive.py  main.py  pyproject.toml  run.sh
.github/workflows/: manual.yml
GBot/: db.py
GBot/cogs/: GBan.py  Utils.py  afk.py  auth.py  debug.py  invite.py  joke.py  leveling.py  monitor.py  music.py  screenshot.py
GBot/core/: bot.py
GBot/data/: __init__.py
GBot/function/: help.py
GBot/models/: GBan.py  auth.py  guild.py  level.py  levelqueue.py  model.py
alembic/: alembic.ini  env.py
cogs/: Automod.py  Utils.py  auth.py  invite.py  joke.py  leveling.py  music.py
core/: bot.py
function/: help.py
models/: auth.py  guild.py  level.py  model.py
