[tool.poetry]
name = "general-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
captcha = "^0.3"
replit = "^3.2.4"
jishaku = "^2.2.0"
discord-debug = "^0.1.10"
aiofiles = "^0.7.0"
Flask = "^2.0.1"
youtube_dl = "^2021.6.6"
aiomysql = "^0.0.21"
SQLAlchemy = "^1.4.23"
dbot = "^0.0.1"
db = "^0.1.1"
pycode = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
